Next
  - Allow values of memsize to represent 4GB or more of RAM. Up to
    1TB, if Pentium PSE extensions are enabled, the memalias setting
    is 40, and "enable pse=pse40" in the conf file. Memalias maximum
    is now 40, instead of 32. Add code to provide that memory above
    the 4GB address mark when PSE is in use by the guest OS. Added
    dosbox.conf option to specify a memory file. When specified, all
    guest memory is memory-mapped from a file on disk, rather than
    allocated from host memory or host swap file. To avoid consuming
    too much RAM on the host, a memory file is REQUIRED to emulate
    memory at or above 4GB. For best performance with the memory file,
    make sure the filesystem you place it on supports sparse files,
    including Linux ext4 and Windows NTFS. (joncampbell123).
  - Fix EGA machine type to determine whether CGA RGBI or EGA RrGgBb
    display is active by vsync polarity, instead of the length of
    htotal. Several online references state that vsync is negative
    for 350-line modes, including 350-line to an MDA monitor. This
    also allows the "enhanced" EGA 320x200 modes in Rambo III to display
    colors correctly. (joncampbell123).
  - Dynamic x86 core: Reflect STI instruction to normal core so that
    the 1-instruction delay is correctly emulated. This makes it
    possible to run Windows XP or Server 2003 with dynamic core and
    SYSENTER/SYSEXIT emulation without random BSODs (joncampbell123).
  - Fix default code page. Instead of assuming 437 at all times, use
    437 for all IBM PC compatible modes and 932 for PC-98 emulation.
    (joncampbell123).
  - Normal core: Fix STI emulation to enforce the 1-instruction delay
    by forcing the normal core to execute another instruction right
    away without providing any opportunity for interrupt processing.
    This does not break Peret Em Heru, Keen games, and it seems to fix
    the random BSOD issues with Windows XP and Windows Server 2003